<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <!--标题-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="22.0dip"
            android:textStyle="bold"
            android:layout_marginTop="20.0dip"/>

    </LinearLayout>

    <!--体重输入框-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12.0dip">
        <TextView
            android:layout_width="120.0dip"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginLeft="3.0dip" />
        <EditText
            android:id="@+id/weight"
            android:layout_width="150.0dip"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Unit"/>

    </LinearLayout>
    <!--性别选择控件-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="120.0dip"
            android:layout_height="wrap_content"
            android:text="@string/xingbie"
            android:layout_marginLeft="3.0dip"/>
        <CheckBox
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/man" />
        <CheckBox
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:layout_marginLeft="10.0dip" />



    </LinearLayout>
    <!--计算事件按钮-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/calculator"
            android:layout_marginTop="20.0dip"
            android:layout_width="200.0dip"
            android:layout_height="wrap_content"
            android:text="@string/calculator" />
    </LinearLayout>
    <!--结果显示-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/result"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"/>

    </LinearLayout>
</LinearLayout>



